fix: Update skeleton loader styles for improved visibility and consistency

--- a/src/styles/admin-styles/admin.scss
+++ b/src/styles/admin-styles/admin.scss
@@ -163,13 +163,13 @@
   }
 }
 
-.skeleton-loader {
+.skeletonLoader {
   display: flex;
   flex-direction: row;
   gap: 1rem;
 }
 
-.skeleton-shape {
+.skeletonShape {
   height: 30px;
   width: 100%;
   // margin-bottom: 10px;
@@ -193,18 +193,24 @@
 
 @keyframes skeleton-loading {
   0% {
-    opacity: 0.4;
+    opacity: 0.7;
   }
   25% {
-    opacity: 0.7;
+    opacity: 0.8;
+  }
+  35%{
+    opacity: 0.9;
   }
   50% {
     opacity: 1;
   }
+  85%{
+    opacity: 0.9;
+  }
   75% {
-    opacity: 0.7;
+    opacity: 0.8;
   }
   100% {
-    opacity: 0.4;
+    opacity: 0.7;
   }
 }
